ssg-sass: root-cause fixes, $channels overloads, NativeMath.pow/sin/cos FFI, PublicMemberMapView, IEEE 754 precision (13587->13865)
Original commits:
- root-cause fixes -- number unit --disallow, hash expr rewrite, color clamping, attribute escaping (13587->13627, +40)
- $channels overloads + identity extend trimming + vendor pseudo + whitespace (13627->13683, +56)
- CssParser identifierLike, setLocalVariable, SASS newlines, unknownAtRule interpolation (13683->13705, +22)
- namespace var parsing + map wrapping + color hue validation + selector parent + BuiltInModule readonly (13705->13753, +48)
- declaration children dispatch + calc validation + CSS import + color arg slash detection (13753->13779, +26)
- NativeMath.pow for color precision + UTF-16 BOM + empty namespace + silent comments (13779->13808, +29)
- SpanColorFormat preservation + newline folding + meta.call string fallback (13808->13816, +8)
- mozDocumentRule + recursion 5000 + namespace ext strip + NativeMath.fma infra (13816->13820, +4)
- Dart pow(x,int) uses repeated multiply + @at-root keyframes reset + meta.call double-splat fix (13820->13841, +21)
- styleRuleSelector->almostAnyValue + @at-root rewrite + MapImporter extension check (13841->13854, +13)
- PublicMemberMapView + @at-root _trimIncluded/_scopeForAtRoot + load-css baseUrl + MapImporter baseDir (13854->13861, +7)
- separate MapImporter/FilesystemImporter + parent-relative path resolution (13861->13862, +1)
- remove channelNumber percent optimization + SassColor.toCssString override -- IEEE 754 identity x*100/100!=x (13862->13864, +2)
- NativeMath sin/cos/atan2/sqrt FFI -- fix last color FP divergence from JVM fdlibm vs native C (13864->13865, +1)